Fixed feed settings, so there's not a 1 px gap between it and the titlebar.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@4065 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: c1c48ffb2b9b8ba32dd85e124b20ca80bfd4b8cc

--- a/tv/resources/css/main.css
+++ b/tv/resources/css/main.css
@@ -49,7 +49,7 @@ img {
 /* This is used to make the feed settings section float above the channel */
 #feed-settings {
     position: fixed;
-    top: 91px;
+    top: 90px;
     left: 0px;
     width: 100%;
     display: none;
@@ -110,7 +110,7 @@ img {
     height: 93px;
     width: 100%;
     min-width: 600px;
-    margin: 0px 0px 1px;
+    margin: 0px 0px 1px 0px;
     position: fixed;
     top: 0px;
     z-index: 6; 
